explanation API added